--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.17",
     "@babel/node": "^7.22.15",
-    "@babel/preset-env": "^7.22.15"
+    "@babel/preset-env": "^7.22.15",
+    "@faker-js/faker": "^8.0.2"
   }
 }
